<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegistrationActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="4sp"
            android:text="@string/choose_your_registered_sim"
            android:textColor="#3d2582"
            android:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="2sp"
            android:text="@string/regSim"
            android:textColor="#3d2582"
            android:textSize="14sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/llOne"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_light_rect"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/ivSelectedSim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="23dp"
                    android:src="@drawable/ic_big_sim" />


                <TextView
                    android:id="@+id/tvSelectedSim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="3sp"
                    android:text="@string/sim_01"
                    android:layout_gravity="center"
                    android:textColor="@color/dark_blue"
                    android:layout_marginTop="30dp"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvSelectedNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="2sp"
                    android:text="@string/spartNo"
                    android:textColor="@color/dark_blue"
                    android:layout_gravity="center"
                    android:layout_marginBottom="23dp"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llSecond"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:background="@drawable/white_light_rect"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/ivSelectedSimSecond"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="23dp"
                    android:src="@drawable/ic_small_sim" />


                <TextView
                    android:id="@+id/tvSelectedSimSecond"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="3sp"
                    android:text="@string/sim_02"
                    android:layout_gravity="center"
                    android:textColor="@color/light_blue"
                    android:layout_marginTop="30dp"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvSelectedNoSecond"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="2sp"
                    android:text="@string/spartNo"
                    android:textColor="@color/light_blue"
                    android:layout_gravity="center"
                    android:layout_marginBottom="23dp"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="#3d2582"
            android:lineSpacingExtra="2sp"
            android:layout_marginTop="20dp"
            android:text="@string/regText"
            />
    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_btn_rect"
        android:text="Get Started"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_margin="30dp"/>

</RelativeLayout>